<resources>
    <string name="app_name">Garden Management App</string>
    <string name="item_notifications">Notifications</string>
    <string name="item_calendar">Calendar</string>
    <string name="item_pictures">Gallery</string>
    <string name="navigation_header_text">Visitor</string>
    <string name="item_profile">Profile</string>
    <string name="item_settings">Settings</string>
    <string name="username_label">Username</string>
    <string name="firstname_text_view">Firstname</string>
    <string name="lastname_text_view">Lastname</string>
    <string name="item_language">Language</string>
    <string name="sign_in_title">Sign-in</string>
    <string name="item_chat">Chat</string>
    <string name="email_label">Email</string>
    <string name="notification_title">Notification</string>
    <string name="cancel_label">CANCEL</string>
    <string name="save_button">SAVE</string>
    <string name="ok_label">OK</string>
    <string name="send_label">SEND</string>
    <string name="item_profiles">Profiles</string>
    <string name="item_home">Home</string>
    <string name="phone_label">Phone</string>
    <string name="id_label">ID</string>
    <string name="password_label">Password</string>
    <string name="default_image_view">Default image view</string>
    <string name="default_sing_in_text"><u>please sign-in</u></string>
    <string name="picture_select_button">choose file</string>
    <string name="file_name_hint">Enter file name</string>
    <string name="upload_button">upload</string>
    <string name="message_label">Message</string>
    <string name="title_label">Title</string>
    <string name="new_notification_message_hint">Compose message</string>
    <string name="welcome_label">Welcome To MyGan</string>
    <string name="chat_title">My Gan Chat Group</string>
    <string name="provide_email_and_password">Provide email and password</string>
    <string name="sign_in_successfully">Sign-in successfully!</string>
    <string name="default_sign_out_text"><u>Sign-out</u></string>
    <string name="profile_picture_alert">Choose profile picture</string>
    <string name="picture_alert_message">Choose one of the ways for upload picture</string>
    <string name="via_camera">Camera</string>
    <string name="via_gallery">Gallery</string>
</resources>