<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/item_home" />

        <item
            android:id="@+id/item_notifications"
            android:checked="false"
            android:icon="@drawable/ic_notifications"
            android:title="@string/item_notifications" />

        <item
            android:id="@+id/item_chat"
            android:checked="false"
            android:icon="@drawable/ic_message"
            android:title="@string/item_chat" />

        <item
            android:id="@+id/item_pictures"
            android:checked="false"
            android:icon="@drawable/ic_photo_library"
            android:title="@string/item_pictures" />

        <item
            android:id="@+id/item_profile"
            android:checked="false"
            android:icon="@drawable/ic_person"
            android:title="@string/item_profile" />

    </group>

</menu>